mysql.tf
resource "aws_db_instance" "mysql" {
  allocated_storage      = 20
  db_name                = "wordpress"
  engine                 = "mysql"
  storage_type           = "gp2"
  engine_version         = "8.0"
  instance_class         = "db.t3.micro"
  username               = "admin"
  password               = "adminadmin"
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  db_subnet_group_name   = aws_db_subnet_group.db_subnet_group.name
  skip_final_snapshot    = true
}
